# firefox-default-prefs-fetcher

./: .gitignore  README.md  pyproject.toml
.github/workflows/: fetch.yml
src/firefox_default_prefs_fetcher/: __init__.py  get_default_preferences.py  get_firefox_geckodriver_versions.py  get_preferences.py  get_versions.py
