[project]
name = "firefox-default-prefs-fetcher"
version = "1.0.12"
description = "Fetching the default settings of Firefox and outputting them into data"
authors = [
    {name = "Denperidge", email = "cat@denperidge.com"},
]
dependencies = [
    "selenium>=4.26.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
main = "src.firefox_default_prefs_fetcher:main"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = {call = "src.firefox_default_prefs_fetcher:main"}
